--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,23 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-  <link rel="icon" href="https://media.licdn.com/dms/image/D5603AQFtxG2AH-AKLA/profile-displayphoto-shrink_800_800/0/1671972896465?e=1714003200&v=beta&t=Rda6L6vfxL3Hl4LDqPzfjy0WMfDxpp04VeRMEfnXfKE" />
-  <title>Vikas | Portfolio</title>
+  <title>Vikas Reddy | Full-Stack Developer Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
- 
-  <meta name="description" content="Self Developed personal website build with React.js">
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Explore my portfolio featuring projects in React, Node.js, and Java. Passionate Full Stack Developer with expertise in MERN stack and cloud deployment." />
+  <meta name="keywords" content="Full Stack Developer, React Developer, Java Developer, MERN Stack, Portfolio, Vikas Reddy, Web Developer" />
+  <meta name="author" content="Vikas Reddy" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://vikas-profile.vercel.app/" />
+
+  <!-- Open Graph (OG) for Social Media -->
+  <meta property="og:title" content="Vikas Reddy | Full-Stack Developer Portfolio" />
+  <meta property="og:description" content="Explore my portfolio featuring projects in React, Node.js, and Java." />
+  <meta property="og:image" content="https://media.licdn.com/dms/image/D5603AQFtxG2AH-AKLA/profile-displayphoto-shrink_800_800/0/1671972896465?e=1714003200&v=beta&t=Rda6L6vfxL3Hl4LDqPzfjy0WMfDxpp04VeRMEfnXfKE" />
+  <meta property="og:url" content="https://vikas-profile.vercel.app/" />
+  <meta property="og:type" content="website" />
 
 </head>
 
